--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.19.0",
 		"react": "^16.12.0",
+		"react-country-flag": "^2.0.1",
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.1.3",
 		"react-router-dom": "^5.1.2",
